# stuttgart-veranstaltungen-rss

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  rss_downloader.py  rss_downloader.py.old  rss_feeds.code-workspace  settings.toml  settings.yaml  test_rss_generator.py
.devcontainer/: devcontainer.json
.github/workflows/: generate_reqs.yml  generate_requirements.yml
reqs/: requirements.txt
rss_downloader/: config.py  docker_utils.py  event_processing.py  helpers.py  main.py  rss_generation.py  rss_utils.py  web_utils.py
rss_downloader/config/: settings.toml
src/: main.py
src/rss_downloader/: calendar_utils.py  docker_utils.py  event_processing.py  log_helper.py  rss_generation.py  rss_utils.py  web_utils.py
src/rssdownloader/: config.py  docker_utils.py  event_processing.py  helpers.py  rss_generation.py  rss_utils.py  web_utils.py
templates/: event_template.html
tests/: test_count_events.py  test_update_nextcloud_news.py
