[tool.poetry]
name = "rss-downloader"
version = "0.1.0"
description = ""
authors = ["Daniel Volz <mail@danielvolz.org>"]
license = "AGPL"
readme = "README.md"
packages = [{include = "rss_downloader"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.9.3"
dynaconf = "3.1.12"
ics = "0.7.2"
jinja2 = "3.1.3"
pytz = "2023.3"
requests = "2.31.0"
markupsafe = "2.0.1"


[tool.poetry.scripts]
rss-downloader = "rss_downloader.__main__:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
[tool.isort]
profile = "black"
[tool.flake8]
max-line-length = 200
ignore = "E203,W503"
show-source = true
[tool.pylint]
args = [
  "--max-line-length=200",
  "--disable=C0114,C0115,W1203",
  "--good-names=e,f,i,j,k,l"
]
[tool.bandit]
args = ["-ll", "-s", "B101,B110"]
